sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:10: error: not found: value e
      (j,getValeur(j-b*e))
                       ^AlgShellSort:11: error: missing arguments for method copie in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      copie-=ecart
      ^AlgShellSort:11: error: missing arguments for method copie in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      copie-=ecart
      ^AlgShellSort:11: error: not found: value ecart
      copie-=ecart
             ^