sort.basic.shell.AlgShellSort.scala.code

def shellSort()  {
	var b= getNombreValeurs()/2
  while(b>0){
    for (i<-b-1 to getNombreValeurs()-1){
    var v = getValeur(i);
    var j = i
    while(j>=b  &&  getValeur(j-b)>v){
      (j,getValeur(j-b*e))
      copie-=ecart
    }
  setValeur(j,v)  
  }
b=b/2
    
    }
}
